Ureka Pay History Card Server Mapping
Change-Id: Iab39c2d280f23194e5e28e38661d6f02337a468e

Former-commit-id: 6edcc20f03e821346ca6f908122a34cf2d3379a5

--- a/frontend/android/app/src/main/res/values/colors.xml
+++ b/frontend/android/app/src/main/res/values/colors.xml
@@ -1,3 +1,6 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:ad379220235b404f677ca592fb8b3c0e8c7b509ebcd2b463addf19e98d33f44f
-size 221
+<resources>
+  <color name="splashscreen_background">#ffffff</color>
+  <color name="iconBackground">#ffffff</color>
+  <color name="colorPrimary">#023c69</color>
+  <color name="colorPrimaryDark">#ffffff</color>
+</resources>
